# compiladores

./: .editorconfig  .gitignore  Automato.drawio  Automaton.hpp  CMakeLists.txt  FDA.cpp  FDA.hpp  LICENSE  README.md  automaton.txt  dfa.txt  main.cpp  pom.xml  prog.txt  prog1.txt  program.txt  test_prog.txt  token_pattern.txt  tokens_pattern.txt
java/src/: Dfa.java  LangScanner.java  State.java  Token.java
lang-parser/: Lang.g4  LangBaseListener.java  LangLexer.interp  LangLexer.java  LangListener.java  LangParser.java
lang-parser/.antlr/: HelloLexer.java  Lang.interp  Lang.tokens  LangLexer.java  LangParser.java
src/: Automaton.cpp  Automaton.hpp  DFA.cpp  DFA.hpp  Dfa.java  FDA.cpp  FDA.hpp  LangScanner.java  Lexer.cpp  Lexer.hpp  Main.java  State.cpp  State.hpp  State.java  Token.cpp  Token.hpp  Token.java  main.cpp
src/lang/: LangCompiler.java
src/lang/ast/: ProgNode.java  SuperNode.java
src/lang/parser/: Lang.g4  LangApp.java  LangBaseListener.java  LangLexer.java  LangListener.java  LangParser.java  LangParserAdaptor.java  ParseAdaptor.java  TestParser.java
src/main/antlr4/lang/compiler/: Lang.g4
src/main/antlr4/lang/compiler/parser/: Lang.g4
src/main/java/app/: App.java  Dfa.java  LangScanner.java  State.java  Token.java
src/main/java/lang/compiler/: AbstractExpressionEvaluatorVisitor.java  App.java  ExpressionEvaluator.java  LangCompiler.java
src/test/java/app/: AppTest.java  LangScannerTest.java
testes/: meuprograma.txt  prog.txt  prog_error.txt  teste.txt  teste2.txt  teste6.lan
testes/sintaxe/certo/: data.lan
(+101 files in other folders)
